Changed name from Electron to Edison.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Electron</title>
+	<title>Edison</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 </head>
@@ -17,7 +17,7 @@
 		</div>
 		<div onclick="hidesidebar();" class="everythingelse">
 		<div id="brand">
-			Electron
+			Edison
 		</div>
 		</div>
 	</div>
