Emulated data transfer from server.

--- a/static/js/jsTest.html
+++ b/static/js/jsTest.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script lang="text/javascript" src="poll.js"></script>
-        <style>
-            div {
-                height: 100px;
-                background-color: rgba(0, 0, 255, 0.2);
-            }
-        </style>
-    </head>
-    <body id="body">
-		<script>
-            theInterface = new Interface();
-		</script>
-    </body>
+
+<head>
+    <script lang="text/javascript" src="poll.js"></script>
+    <style>
+        div {
+            height: 100px;
+            background-color: rgba(0, 0, 255, 0.2);
+        }
+    </style>
+</head>
+
+<body id="body">
+    <script>
+        var theInterface = new Interface("blah", "body");
+    </script>
+</body>
+
 </html>
