Leader button turns blue. Some for loops changed.

--- a/static/js/jsTest.html
+++ b/static/js/jsTest.html
@@ -8,11 +8,16 @@
             height: 100px;
             background-color: rgba(0, 0, 255, 0.2);
         }
+        
+        .winner {
+            background-color: blue;
+        }
     </style>
 </head>
 
 <body id="body">
     <script>
+        electionId = "blah";
         var theInterface = new Interface("blah", "body");
     </script>
 </body>
