--- a/static/js/jsTest.html
+++ b/static/js/jsTest.html
@@ -2,17 +2,10 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="pollStyle.css">
+    <script lang="text/javascript" src="jquery-1.12.2.min.js"></script>
     <script lang="text/javascript" src="poll.js"></script>
-    <style>
-        div {
-            height: 100px;
-            background-color: rgba(0, 0, 255, 0.2);
-        }
-        
-        .winner {
-            background-color: blue;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body id="body">
